syntax = "proto3";

package event;

option go_package = "github.com/trb1maker/otus_golang_home_work/hw12_13_14_15_calendar/internal/server/grpc/api";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

message Event {
    string                    id          = 1;
    string                    title       = 2;
    google.protobuf.Timestamp startTime   = 3;
    google.protobuf.Timestamp endTime     = 4;
    string                    description = 5;
    string                    owner       = 6;
    google.protobuf.Duration  notify      = 7;
}

message Request {
    string userId  = 1;
    string eventId = 2;
    Event event    = 3;
}

message Response {
    string         eventId = 1;
    repeated Event events  = 2;
}

service EventService {
    rpc newEvent(Event) returns (Response);
    rpc getEvent(Request) returns (Response);
    rpc updateEvent(Event) returns (google.protobuf.Empty);
    rpc deleteEvent(Request) returns (google.protobuf.Empty);

    rpc all(Request) returns (Response);
    rpc next(Request) returns (Response);
    rpc day(Request) returns (Response);
    rpc week(Request) returns (Response);
    rpc month(Request) returns (Response);
}